Do not focus Skip Ad button if invisible in Picture-in-Picture window

This CL makes sure the new Skip Ad button in the Picture-in-Picture
window is not focused when it is not visible.

Bug: 922339
Change-Id: I8ae65fc2c5691d8abc66dec76bd254b88a3fa033
Reviewed-on: https://chromium-review.googlesource.com/c/1422700
Auto-Submit: François Beaufort <beaufort.francois@gmail.com>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624621}
Former-commit-id: 74ed83f004dce34ff89eaa73a805f7cf19721490